--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,12 +1,49 @@
 
-/* 
+body{
+    background-color: rgb(0, 0, 0);
+    margin: 0;
+}
 
-    You can write your own styles here...
-    
-    
-    ...Or you can use the import command to include 
-    other sylesheets into your bunde as well, e.j:
-    
-    import 'relative/path/to/stylesheet.scss';
+#wrapper{
+    margin-left: auto;
+    margin-right: auto;
+    width: 960px;
+}
 
-*/
+.clock{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: white;
+    background-color: rgb(59, 59, 59);
+    margin: 10px;
+    border-radius: 10px;
+    border-style: solid;
+    border-color: rgb(69, 69, 69);
+    border-top-width: thin;
+    border-bottom-width: thin;
+    font-size: 50px;
+    font-weight: 500;
+    width: 90px;
+    height: 100px;
+    text-align: center;
+}
+
+.second{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: white;
+    background-color: rgb(31, 31, 31);
+    margin: 10px;
+    border-radius: 10px;
+    border-style: solid;
+    border-color: rgb(41, 41, 41);
+    border-top-width: thin;
+    border-bottom-width: thin;
+    font-size: 70px;
+    font-weight: 600;
+    width: 70px;
+    height: 100px;
+    text-align: center;
+}
